--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -43,7 +43,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     text-align: left;
-    height: 35%;
+    height: 40%;
     width: 85%;
     margin-left: 15%;
 
@@ -54,7 +54,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     text-align: left;
-    height: 30%;
+    height: 35%;
     width: 85%;
     margin-left: 15%;
 }
@@ -65,7 +65,7 @@ a {
     align-items: center;
     padding: 10px;
     border-radius: 10px;
-    width: 90%;
+    width: 100%;
     height: 35px;
     text-decoration: none;
     color: #000;
@@ -159,16 +159,21 @@ a:hover {
 .filtro {
     display: flex;
     justify-content: space-between;
-    width: 35%;
+    width: 50%;
 }
 
 .selecionar {
-    width: 45%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 50%;
 }
 
 .select_filtro {
     height: 110%;
-    width: 70%;
+    width: 40%;
     border: solid 2px black;
     border-radius: 10px;
     font-weight: bold;
