--- a/public/css/edicaoDep.css
+++ b/public/css/edicaoDep.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
@@ -14,7 +15,7 @@ body {
     width: 20%;
     height: 100vh;
     background-color: #F1F2F7;
-    box-shadow:  0 0 5px #000;
+    box-shadow: 0 0 5px #000;
 }
 
 .container-menu {
@@ -38,6 +39,7 @@ body {
 }
 
 
+
 .menu {
     display: flex;
     flex-direction: column;
@@ -58,7 +60,8 @@ body {
     margin-left: 10%;
 }
 
-a {
+
+.container-menu a {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -75,7 +78,7 @@ a {
     }
 }
 
-a:hover {
+.container-menu a:hover {
     color: black;
     background-color: #969ba3;
     height: 35px;
@@ -117,110 +120,11 @@ a:hover {
 .notificacoes img {
     height: 20px;
 }
+
 .notificacoes:hover {
     cursor: pointer;
     border-radius: 90px;
     background-color: #969ba3;
-}
-
-.nome {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 100%;
-}
-
-.notificacoes {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 100%;
-}
-
-.conteudo-painel {
-    display: flex;
-    flex-direction: column;
-    height: 95%;
-    width: 100%;
-}
-
-.cabecalho {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
-    height: 10%;
-    width: 100%;
-}
-
-.filtro {
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
-}
-
-.selecionar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    width: 50%;
-}
-
-.select_filtro {
-    height: 110%;
-    width: 40%;
-    border: solid 2px black;
-    border-radius: 10px;
-    font-weight: bold;
-    text-align: center;
-}
-
-.indicadores_geral {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 30%;
-    width: 100%;
-}
-
-.secao_kpi_geral {
-    width: 30%;
-
-    h3 {
-        margin-left: 20px;
-    }
-
-}
-
-.linha {
-    height: 100%;
-    border: solid 1px #D3D3D3;
-    border-radius: 25px;
-}
-
-.caixa_geral {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90%;
-    width: 100%;
-}
-
-.kpi_geral {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80%;
-    width: 80%;
-    background-color: black;
-    border-radius: 15px;
-    color: white;
-    font-size: 50px;
-    font-weight: bold;
 }
 
 .linha-horizontal {
@@ -230,12 +134,73 @@ a:hover {
     margin-left: 1%;
 }
 
-.grafico {
-    padding: 10px;
-    height: 60%;
+.painel-conta {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
     width: 100%;
 }
 
-.conteudo-grafico {
-    height: 90%;
+.cabecalho {
+    display: flex;
+    flex-direction: row;
+    height: 10%;
+    width: 100%;
+    padding: 15px;
+}
+
+.conteudo-painel {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 95%;
+    width: 55%;
+    border-radius: 15px;
+    background-color: #D9D9D9;
+    padding: 20px;
+}
+
+.form .inputs {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 85%;
+    width: 80%;
+}
+
+.form .inputs input {
+    height: 35px;
+    border: transparent;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.form .btn {
+    width: 150px;
+    height: 35px;
+    border: transparent;
+    border-radius: 10px;
+    background-color: #000;
+    color: #D3D3D3;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.form .btn:hover {
+    height: 36px;
+    width: 155px;
 }
