--- a/public/css/edicaoOperacao.css
+++ b/public/css/edicaoOperacao.css
@@ -2,45 +2,45 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  
-  body {
+}
+
+
+body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: row;
-  }
-  
-  .menu-lateral {
+}
+
+.menu-lateral {
     width: 20%;
     height: 100vh;
     background-color: #F1F2F7;
     box-shadow: 0 0 5px #000;
-  }
-  
-  .container-menu {
+}
+
+.container-menu {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     height: 100%;
     color: #000;
-  }
-  
-  
-  .logo {
+}
+
+
+.logo {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 25%;
-  }
-  
-  .logo img {
+}
+
+.logo img {
     height: 100%;
-  }
-  
-  
-  
-  .menu {
+}
+
+
+
+.menu {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -50,7 +50,7 @@
     margin-left: 10%;
 }
 
-  .outros {
+.outros {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -60,8 +60,8 @@
     margin-left: 10%;
 }
 
-  
-  .container-menu a {
+
+.container-menu a {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -77,120 +77,132 @@
         height: 25px;
         margin-right: 5px;
     }
-  }
-  
-  .container-menu a:hover {
+}
+
+.container-menu a:hover {
     color: black;
     background-color: #969ba3;
     height: 35px;
     width: 95%;
     padding: 10px;
     cursor: pointer;
-  }
-  
-  .painel {
+}
+
+.painel {
     width: 80%;
     height: 100vh;
-  }
-  
-  .container-painel {
+}
+
+.container-painel {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
-  }
-  
-  .header-painel {
+}
+
+.header-painel {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     height: 5%;
     width: 100%;
-  }
-  
-  .usuario {
+}
+
+.usuario {
     width: 20%;
-  }
-  
-  .notificacoes {
+}
+
+.notificacoes {
     width: 10%;
     height: 25px;
-  }
-  
-  .notificacoes img {
+}
+
+.notificacoes img {
     height: 20px;
-  }
-  
-  .notificacoes:hover {
+}
+
+.notificacoes:hover {
     cursor: pointer;
     border-radius: 90px;
     background-color: #969ba3;
-  }
+}
 
-  .linha-horizontal {
+.linha-horizontal {
     width: 100%;
     border: solid 1px #D3D3D3;
     width: 98%;
     margin-left: 1%;
-  }
+}
 
-  .painel-conta {
+.painel-conta {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
-  }
+}
 
-  .cabecalho {
+.cabecalho {
     display: flex;
     flex-direction: row;
     height: 10%;
     width: 100%;
     padding: 15px;
-  }
+}
 
-  .conteudo-painel {
+.conteudo-painel {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90%;
+    height: 100%;
     width: 100%;
     padding: 20px;
 
-  }
+}
 
-  .form {
+.form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 85%;
+    height: 95%;
     width: 55%;
     border-radius: 15px;
     background-color: #D9D9D9;
     padding: 20px;
-  }
+}
 
-  .form .inputs {
+.form .inputs {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 70%;
+    height: 85%;
     width: 80%;
-  }
+}
 
-  .form .inputs input {
+.form .inputs input {
     height: 35px;
     border: transparent;
     border-radius: 15px;
     text-align: center;
-  }
+}
 
-  .form .btn {
+.form .inputs textarea {
+        height: 25%;
+        width: 100%;
+        border: transparent;
+        border-radius: 15px;
+        padding: 10px;
+        word-wrap: break-word;
+        word-break: break-word;
+        overflow-wrap: break-word;
+        overflow: hidden;
+}
+
+.form .btn {
     width: 150px;
     height: 35px;
     border: transparent;
@@ -199,9 +211,9 @@
     color: #D3D3D3;
     font-size: 15px;
     font-weight: bold;
-  }
-  
-  .form .btn:hover {
+}
+
+.form .btn:hover {
     height: 36px;
     width: 155px;
-  }
+}
